# TIO

./: .editorconfig  .fvmrc  .gitignore  .releaserc.yaml  .releaserc.yml  .yamlignore  .yamllint.yaml  CLAUDE.md  LICENSE  Makefile  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  generate.py  justfile  pubspec.yaml  rust-toolchain.toml
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: pipeline.yaml  (+22 more)
android/: .gitignore  build.gradle  debug.key.properties  gradle.properties  gradlew.bat  key.properties.debug  settings.gradle
docs/: app-script.md  dependabot.md  enable-dependabot-auto-merge.md  publish-apps-to-app-stores.md  setup.md  soundfont.md  troubleshooting.md  unpublish-apps-from-app-stores.md  update-flutter-rust-bridge.md  update-rust-dependencies.md  update-rust.md  upgrade-fastlane.md  upgrade-flutter-dart.md  upgrade-ios-android-sdks.md
ios/: .gitignore  MediaLibraryPicker.swift  Podfile  export-options-dev.plist  export-options.plist
lib/: app.dart  main.dart  splash_app.dart
lilypond/: export.py  notes.ly
linux/: CMakeLists.txt  my_application.cc
native/: Cargo.toml
native/native.xcodeproj/: project.pbxproj
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
native/src/audio/: audio_buffer.rs  audio_buffer_interpolated.rs  float_index.rs  global.rs
native/src/modules/: generator.rs  media_player.rs  metronome.rs  metronome_rhythm.rs  mod.rs  piano.rs  recorder.rs  tuner.rs
native/src/test/: mod.rs  test_load_audio.rs  test_rhythm.rs  test_util.rs
native/src/test/resources/formats/: sweep_24.flac  sweep_44,1k.m4a
native/src/util/: constants.rs  debug_log.rs  mod.rs  util_functions.rs
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/pitch_shift/: Cargo.toml
rust/pitch_shift/src/: lib.rs
rust/scripts/: app.sh
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: api.rs  ffi.rs  mod.rs  simple.rs
rust/src/api/audio/: audio_buffer.rs  audio_buffer_interpolated.rs  float_index.rs  global.rs  mod.rs  streaming_audio_source.rs
rust/src/api/modules/: audio_renderer.rs  generator.rs  media_player.rs  metronome.rs  metronome_rhythm.rs  mod.rs  piano.rs  recorder.rs  tuner.rs
rust/src/api/test/: mod.rs  test_float_index.rs  test_load_audio.rs  test_media_player.rs  test_pitch_shift.rs  test_rhythm.rs  test_util.rs
rust/src/api/test/resources/formats/: sweep.aiff  sweep_16.flac  sweep_48k.m4a
rust/src/api/util/: constants.rs  mod.rs  util_functions.rs
rust_builder/: pubspec.yaml
scripts/: analyze-files-with-too-many-lines.sh  analyze-todos-and-fixmes.sh  app.sh  assert-no-local-changes.sh  build.sh  bump-build-number-and-tag.sh  bump-dev-version-and-tag.sh  bump-semver-and-tag.sh  bump-version-and-build-number.sh  bump-version-and-tag.sh  commit-pubspec-yaml.sh  commit-version-and-build-number.sh  label-dependabot.sh  label-pr-by-semver.sh  load-build-number-from-latest-tag.sh  load-current-version-and-build-number.sh  load-release-version-from-latest-tag.sh  load-semver-from-latest-tag.sh  load-semver-from-pr-title.sh  load-version-and-build-number-from-latest-tag.sh  load-version-and-build-number-from-pubspec.sh  load-version-from-latest-tag.sh  print-average-source-code-file-length.sh  print-outdated-dependencies.sh  print-todos-and-fixmes.sh  run.sh  set-version-in-pubspec.sh  update-version-and-build-number-in-pubspec-with-latest-tag.sh  update-version-and-build-number.sh  update-version-with-latest-git-tag.sh  upload.sh
supercollider/: generate_metronome_sounds.scd
web/: index.html  manifest.json
widgetbook/: README.md  pubspec.yaml
windows/: CMakeLists.txt
(+655 files in other folders)
