[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
symphonia = { version = "0.5.4", features = [
    "mpa",
    "all-codecs",
    "aiff",
    "alac",
    "adpcm",
    "aac",
    "vorbis",
    "pcm",
    "isomp4",
    "caf",
    "mkv",
    "opt-simd-sse",
    "opt-simd-avx",
    "opt-simd-neon",
    "default",
] }
cpal = "0.15.0"
anyhow = "1"
flutter_rust_bridge = "1.82.6"
jni = "0.21.0"
ndk-context = "0.1.1"
lazy_static = "1.4.0"
pitch-detection = "0.3.0"
arraytools = "0.1.5"
stackvec = "0.2.1"
indexed-ring-buffer = "0.1.3"
lerp = "0.5.0"
pitch_shift = "1.0.0"
queues = "1.1.0"
rand = "0.8.5"
tdpsola = "0.1.0"
wav = "1.0.0"
waverly = "0.2.0"
ringbuf = "0.3.2"
enum-map = "2.5.0"
rubato = "0.14.1"
num = "0.4.0"
rustysynth = "1.3.1"
conv = "0.3.3"
