[package]
name = "rust_lib_tiomusic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
test = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
anyhow = "1.0.89"
cpal = "0.15.3"
enum-map = "2.7.3"
flutter_rust_bridge = "=2.7.1"
indexed-ring-buffer = "0.1.3"
lazy_static = "1.5.0"
lerp = "0.5.0"
log = "0.4.22"
num = "0.4.3"
pitch-detection = "0.3.0"
pitch_shift = "1.0.0"
queues = "1.1.0"
rand = "0.8.5"
ringbuf = "0.3.2"
rubato = "0.15.0"
rustysynth = "1.3.1"
symphonia = { version = "0.5.4", features = [
    "mpa",
    "all-codecs",
    "aiff",
    "alac",
    "adpcm",
    "aac",
    "vorbis",
    "pcm",
    "isomp4",
    "caf",
    "mkv",
    "opt-simd-sse",
    "opt-simd-avx",
    "opt-simd-neon",
    "default",
] }
